[gd_scene load_steps=7 format=3 uid="uid://mdxlpclhbxqj"]

[ext_resource type="Script" path="res://Scripts/UiController.gd" id="1_w6vc4"]
[ext_resource type="Theme" uid="uid://c8msys5wcsou3" path="res://GameData/ui_theme.tres" id="2_lvmwo"]
[ext_resource type="PackedScene" uid="uid://dw2n7gu1pxqyq" path="res://Objects/heart_ui.tscn" id="3_3p11u"]
[ext_resource type="Texture2D" uid="uid://khy06ps8avud" path="res://Graphics/tilemap.png" id="4_p3ix8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vcsch"]
atlas = ExtResource("4_p3ix8")
region = Rect2(75, 38, 19, 18)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3tagb"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0.85098)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_w6vc4")
hurt_color = Color(1, 0, 0, 0.286275)
hurt_duration = 0.5

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1134.0
offset_bottom = 702.0

[node name="LevelDuration" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0238095
anchor_right = 0.97619
anchor_bottom = 0.0569801
offset_top = 13.0
grow_horizontal = 2
color = Color(1, 1, 1, 0.392157)
metadata/_edit_use_anchors_ = true

[node name="LevelDurationCompleted" type="ColorRect" parent="Control/LevelDuration"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_vertical = 2
color = Color(1, 1, 1, 0.392157)
metadata/_edit_use_anchors_ = true

[node name="ControlsMovement" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -243.0
offset_right = 189.0
offset_bottom = -81.0
grow_vertical = 0
theme = ExtResource("2_lvmwo")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ControlsMovement"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="Control/ControlsMovement/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_vertical = 4

[node name="Movement" type="Label" parent="Control/ControlsMovement/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -16.0
offset_right = 58.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Movement"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Control/ControlsMovement/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_lvmwo")
columns = 3

[node name="Control" type="Control" parent="Control/ControlsMovement/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(52, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/ControlsMovement/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Control6" type="Panel" parent="Control/ControlsMovement/VBoxContainer/GridContainer/MarginContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8

[node name="Label" type="Label" parent="Control/ControlsMovement/VBoxContainer/GridContainer/MarginContainer/Control6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "W"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Control3" type="Control" parent="Control/ControlsMovement/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(52, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="Control/ControlsMovement/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Control6" type="Panel" parent="Control/ControlsMovement/VBoxContainer/GridContainer/MarginContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="Label" type="Label" parent="Control/ControlsMovement/VBoxContainer/GridContainer/MarginContainer2/Control6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "A"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer3" type="MarginContainer" parent="Control/ControlsMovement/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Control6" type="Panel" parent="Control/ControlsMovement/VBoxContainer/GridContainer/MarginContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="Label" type="Label" parent="Control/ControlsMovement/VBoxContainer/GridContainer/MarginContainer3/Control6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "S"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer4" type="MarginContainer" parent="Control/ControlsMovement/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Control6" type="Panel" parent="Control/ControlsMovement/VBoxContainer/GridContainer/MarginContainer4"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="Label" type="Label" parent="Control/ControlsMovement/VBoxContainer/GridContainer/MarginContainer4/Control6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "D"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ControlsShoot" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 945.0
offset_top = -241.0
offset_right = 1107.0
offset_bottom = -79.0
grow_vertical = 0
theme = ExtResource("2_lvmwo")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ControlsShoot"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="Control/ControlsShoot/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_vertical = 4

[node name="Shoot" type="Label" parent="Control/ControlsShoot/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -16.0
offset_right = 58.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Shoot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Control/ControlsShoot/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_lvmwo")
columns = 3

[node name="Control" type="Control" parent="Control/ControlsShoot/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(52, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/ControlsShoot/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Control6" type="Panel" parent="Control/ControlsShoot/VBoxContainer/GridContainer/MarginContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8

[node name="Label" type="Label" parent="Control/ControlsShoot/VBoxContainer/GridContainer/MarginContainer/Control6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "↑"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Control3" type="Control" parent="Control/ControlsShoot/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(52, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="Control/ControlsShoot/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Control6" type="Panel" parent="Control/ControlsShoot/VBoxContainer/GridContainer/MarginContainer2"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="Label" type="Label" parent="Control/ControlsShoot/VBoxContainer/GridContainer/MarginContainer2/Control6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "←"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer3" type="MarginContainer" parent="Control/ControlsShoot/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Control6" type="Panel" parent="Control/ControlsShoot/VBoxContainer/GridContainer/MarginContainer3"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="Label" type="Label" parent="Control/ControlsShoot/VBoxContainer/GridContainer/MarginContainer3/Control6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "↓"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MarginContainer4" type="MarginContainer" parent="Control/ControlsShoot/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Control6" type="Panel" parent="Control/ControlsShoot/VBoxContainer/GridContainer/MarginContainer4"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="Label" type="Label" parent="Control/ControlsShoot/VBoxContainer/GridContainer/MarginContainer4/Control6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "→"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PanelContainer" type="PanelContainer" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(162, 54)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.077
anchor_right = 0.026
anchor_bottom = 0.077
offset_left = 0.515999
offset_top = -0.0540047
offset_right = 162.516
offset_bottom = 53.946

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
custom_minimum_size = Vector2(162, 54)
layout_mode = 2
columns = 3
metadata/_edit_use_anchors_ = true

[node name="HeartUI" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_3p11u")]
layout_mode = 2

[node name="HeartUI2" type="TextureRect" parent="Control/PanelContainer/GridContainer"]
z_index = 1
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
texture = SubResource("AtlasTexture_vcsch")

[node name="HeartUI3" type="TextureRect" parent="Control/PanelContainer/GridContainer"]
z_index = 1
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
texture = SubResource("AtlasTexture_vcsch")

[node name="Panel" type="Panel" parent="Control/PanelContainer"]
custom_minimum_size = Vector2(162, 54)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="EndPanel" type="Panel" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -162.0
offset_right = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3tagb")

[node name="PlayerFeedback" type="Label" parent="Control/EndPanel"]
layout_mode = 0
offset_right = 216.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 20
text = "Level Completed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndButton" type="Button" parent="Control/EndPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.486111
anchor_top = 0.608025
anchor_right = 0.486111
anchor_bottom = 0.608025
offset_left = -57.0
offset_top = -18.5
offset_right = 57.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
text = "Restart Game"
metadata/_edit_use_anchors_ = true

[node name="PlayerHurtFlash" type="ColorRect" parent="Control"]
visible = false
z_index = 10
layout_mode = 0
offset_left = -27.0
offset_top = -27.0
offset_right = 1161.0
offset_bottom = 729.0
color = Color(1, 0, 0, 0.294118)

[connection signal="pressed" from="Control/EndPanel/EndButton" to="." method="_on_end_button_pressed"]
